--- a/.github/workflows/vale.yml
+++ b/.github/workflows/vale.yml
@@ -40,7 +40,7 @@ jobs:
     - name: Run Vale on changed files with reviewdog
       run: |
         for file in $(echo ${{ steps.changed-files.outputs.files }} | jq -r '.[]'); do
-          vale --output=JSON $file | reviewdog -f=vale -name="Vale" -reporter=github-pr-review -level=warning -filter-mode=nofilter
+          vale --output=JSON $file | reviewdog -f=vale -name="Vale" -reporter=github-pr-review -level=warning -filter-mode=diff_context
         done
       env:
         REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -50,7 +50,7 @@ jobs:
         for file in $(echo ${{ steps.changed-files.outputs.files }} | jq -r '.[]'); do
           vale --output=JSON $file > vale_output.json
           jq '.[] | .file = "'$file'"' vale_output.json | jq -s . > rdjson_output.json
-          reviewdog -f=rdjson -name="Vale" -reporter=github-pr-review -level=warning -filter-mode=nofilter < rdjson_output.json
+          reviewdog -f=rdjson -name="Vale" -reporter=github-pr-review -level=warning -filter-mode=diff_context < rdjson_output.json
         done
       env:
         REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
