--- a/.vale.ini
+++ b/.vale.ini
@@ -1,7 +1,13 @@
 StylesPath = .github/styles
-MinAlertLevel = suggestion
+
+Vocab = docs
+
+MinAlertLevel = error
+
+SkippedScopes = script, style, pre, figure, img, alt
+IgnoredScopes = code, tt, img
+IgnoredClasses = mdImages
 
 [*.md]
-BasedOnStyles = custom
+BasedOnStyles = custom, Vale
 
-Vocab = EN
