--- a/.github/workflows/vale.yml
+++ b/.github/workflows/vale.yml
@@ -25,5 +25,5 @@ jobs:
         uses: errata-ai/vale-action@reviewdog
         with:
           files: ${{ steps.get_changed_files.outputs.all_changed_files }}
-          filter_mode: diff_context
+          filter_mode: file
           separator: ","
