--- a/.vale.ini
+++ b/.vale.ini
@@ -2,7 +2,7 @@ StylesPath = .github/styles
 
 Vocab = docs
 
-MinAlertLevel = error
+MinAlertLevel = suggestion
 
 SkippedScopes = script, style, pre, figure, img, alt
 IgnoredScopes = code, tt, img
