--- a/.github/workflows/vale.yml
+++ b/.github/workflows/vale.yml
@@ -5,12 +5,12 @@ on:
 
 jobs:
   vale:
-    name: Vale Action
+    name: vale action
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        
+
       - name: Get Changed Files
         id: get_changed_files
         uses: tj-actions/changed-files@v44
@@ -18,33 +18,19 @@ jobs:
           files: |
             **.md
           separator: ","
-          
+      
       - name: Print Changed Markdown Files
         run: |
           echo "Changed markdown files: ${{ steps.get_changed_files.outputs.all_changed_files }}"
 
-      - name: Run Vale Linter
-        run: |
-          echo ${{ steps.get_changed_files.outputs.all_changed_files }} | tr ',' '\n' | xargs -I {} vale --output=JSON {} > valelintoutput.json
-
-      - name: Install Reviewdog
+      - name: Setup Reviewdog
         uses: reviewdog/action-setup@v1
-
-      - name: Run Reviewdog
-        env:
-          REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          cat valelintoutput.json | reviewdog -f=vale -reporter=github-pr-review -fail-on-error=false
-
-      - name: Setup Suggester
-        uses: reviewdog/action-suggester@v1
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          level: warning
-          tool_name: vale
-          tool_description: "Vale Linter Suggestions"
-          tool_url: "https://github.com/errata-ai/vale"
-          
-      - name: Run Suggester
+          reviewdog_version: latest
+
+      - name: Run Vale with Reviewdog
+        id: run_vale
         run: |
-          cat valelintoutput.json | suggester
+          vale --output=JSON ${{ steps.get_changed_files.outputs.all_changed_files }} > vale_output.json
+          cat vale_output.json | reviewdog -f=vale -name="vale" -reporter=github-pr-check -filter-mode=file -level=error -fail-on-error=false > reviewdog-output.log
+      
