--- a/.github/workflows/vale.yml
+++ b/.github/workflows/vale.yml
@@ -25,7 +25,7 @@ jobs:
         uses: errata-ai/vale-action@reviewdog
         with:
           files: ${{ steps.get_changed_files.outputs.all_changed_files }}
-          filter_mode: file
+          filter_mode: diff_context
           separator: ","
       - name: Run action-suggester
         uses: reviewdog/action-suggester@v1
