--- a/.github/styles/custom/ComplexWords.yml
+++ b/.github/styles/custom/ComplexWords.yml
@@ -1,7 +1,7 @@
 extends: substitution
 message: "Consider using '%s' instead of '%s'."
 ignorecase: true
-level: suggestion
+level: warning
 swap:
   "approximate(?:ly)?": about
   abundance: plenty
