--- a/.github/workflows/vale.yml
+++ b/.github/workflows/vale.yml
@@ -3,6 +3,10 @@ on:
   pull_request:
   workflow_dispatch:
 
+permissions:
+  contents: read
+  pull-requests: write
+
 jobs:
   vale:
     name: vale action
