--- a/.github/workflows/vale.yml
+++ b/.github/workflows/vale.yml
@@ -23,10 +23,14 @@ jobs:
           sudo mv vale /usr/local/bin/
 
       - name: Run Vale
-        run: vale .
+        run: |
+          vale . > vale_output.txt
+          cat vale_output.txt
 
       - name: suggester / vale
         uses: reviewdog/action-suggester@v1
         with:
           tool_name: vale
-          level: warning
+          level: warning # Optional: specify the alert level
+        env:
+          REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
