--- a/.github/workflows/vale.yml
+++ b/.github/workflows/vale.yml
@@ -24,13 +24,13 @@ jobs:
 
       - name: Run Vale
         run: |
-          vale . > vale_output.txt
-          cat vale_output.txt
+          vale . --output=JSON > vale_output.json
+          cat vale_output.json
 
       - name: suggester / vale
         uses: reviewdog/action-suggester@v1
         with:
           tool_name: vale
-          level: warning # Optional: specify the alert level
+          level: warning
         env:
           REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
