--- a/.github/workflows/vale.yml
+++ b/.github/workflows/vale.yml
@@ -10,6 +10,12 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Install Gem and Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: '3.3'
+        
       - name: Get Changed Files
         id: get_changed_files
         uses: tj-actions/changed-files@v44
@@ -25,5 +31,8 @@ jobs:
         uses: errata-ai/vale-action@reviewdog
         with:
           files: ${{ steps.get_changed_files.outputs.all_changed_files }}
-          filter_mode: file
           separator: ","
+          filter_mode: diff_context
+          reporter: github-pr-review
+          fail_on_error: true
+          token: ${{secrets.GITHUB_TOKEN}}
