--- a/.github/workflows/vale.yml
+++ b/.github/workflows/vale.yml
@@ -33,6 +33,6 @@ jobs:
           files: ${{ steps.get_changed_files.outputs.all_changed_files }}
           separator: ","
           filter_mode: diff_context
-          reporter: github-pr-review
+          reporter: github-pr-check
           fail_on_error: true
           token: ${{secrets.GITHUB_TOKEN}}
