--- a/.github/styles/custom/Latin.yml
+++ b/.github/styles/custom/Latin.yml
@@ -1,11 +1,19 @@
 extends: substitution
-message: "Use '%s' instead of '%s'."
-link: 'https://developers.google.com/style/abbreviations'
-ignorecase: true
-level: error
-nonword: true
+
+message: "Avoid Latin abbreviations: '%s'. Consider using 'for example', 'that is', 'and so forth', or 'such as'."
+level: suggestion
+swap:
+  - e.g.: for example
+  - eg: for example
+  - i.e.: for example
+  - i.e.: that is
+  - etc.: and so on
+  - N.B.: Note
+
 action:
   name: replace
-swap:
-  '\b(?:eg|e\.g\.)(?=[\s,;])': for example
-  '\b(?:ie|i\.e\.)(?=[\s,;])': that is
+  params:
+    - for example
+    - that is
+    - and so on
+    - Note
