--- a/.github/workflows/vale.yml
+++ b/.github/workflows/vale.yml
@@ -38,15 +38,8 @@ jobs:
           fail_on_error: true
           token: ${{secrets.GITHUB_TOKEN}}
 
-      - name: Convert to Reviewdog RDFormat
-        id: convert_to_rdformat
+      - name: Convert Vale Output to rdformat
         run: |
-          changed_files="${{ steps.get_changed_files.outputs.all_changed_files }}"
-          IFS=',' read -ra files <<< "$changed_files"
-          for file in "${files[@]}"; do
-            echo "{\"source\":\"$file\",\"message\":\"File changed.\",\"location\":{\"path\":\"$file\",\"range\":{\"start\":{\"line\":1,\"column\":1},\"end\":{\"line\":1,\"column\":1}}}}" >> rdformat_output.json
-          done
-
-      - name: Print RDFormat Output
-        run: |
-          cat rdformat_output.json
+          vale --output=rdjson ${{ steps.get_changed_files.outputs.all_changed_files }} > vale_output.rdjson
+          echo "Vale Output in rdjson format:"
+          cat vale_output.rdjson
