--- a/.github/workflows/vale.yml
+++ b/.github/workflows/vale.yml
@@ -25,4 +25,7 @@ jobs:
           echo "$PWD/bin" >> $GITHUB_PATH
 
       - name: Run Vale
-        run: vale README.md
+        run: vale README.md --output=JSON output.json
+    
+      - name: Print Vale output
+        run: cat output.json
