--- a/.github/workflows/vale.yml
+++ b/.github/workflows/vale.yml
@@ -27,16 +27,7 @@ jobs:
       - name: Run Vale
         run: vale . --output=JSON > vale_output.json
 
-      - name: Install reviewdog
-        uses: reviewdog/action-setup@v1
-        with:
-          reviewdog_version: latest
+      - name: Print output file
+        run: cat vale_output.json
 
-      - name: Run reviewdog
-        run: |
-          reviewdog -f=vale -name="Vale" -reporter=github-pr-review -level=error -filter-mode=nofilter -f.diff=""
-
-        env:
-          REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          REVIEWDOG_GITHUB_API_FAIL_ON_ERROR: false
 
