--- a/.github/workflows/vale.yml
+++ b/.github/workflows/vale.yml
@@ -26,8 +26,7 @@ jobs:
 
       - name: Run Vale
         run: vale . --output=JSON > vale_output.json
+              cat vale_output.json
 
-      - name: Print output file
-        run: cat vale_output.json
 
 
