--- a/.github/workflows/vale.yml
+++ b/.github/workflows/vale.yml
@@ -26,8 +26,10 @@ jobs:
 
       - name: Run Vale
         run: |
+          set -e
           vale . --output=JSON > vale_output.json
           cat vale_output.json
+        continue-on-error: true
 
 
 
