--- a/.github/workflows/vale.yml
+++ b/.github/workflows/vale.yml
@@ -33,7 +33,7 @@ jobs:
           echo "Vale errors:"
           cat tmp/vale_error.log || echo "No errors captured"
       
-      - name: Install reviewdog
+      - name: Install reviewdog test
         uses: reviewdog/action-setup@v1
         with:
           reviewdog_version: latest
