--- a/.github/workflows/vale.yml
+++ b/.github/workflows/vale.yml
@@ -39,3 +39,13 @@ jobs:
           reviewdog_version: latest
 
 
+      - name: Run reviewdog
+        run: |
+          if [[ -f "tmp/vale_output.json" ]]; then
+            reviewdog -f=vale -name="Vale" -reporter=github-pr-review -level=error -filter-mode=nofilter < tmp/vale_output.json
+          else
+            echo "vale_output.json not found. Skipping reviewdog."
+          fi
+        env:
+          REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          REVIEWDOG_GITHUB_API_FAIL_ON_ERROR: false
