--- a/.github/workflows/vale.yml
+++ b/.github/workflows/vale.yml
@@ -31,5 +31,7 @@ jobs:
           reviewdog_version: latest
           
       - name: Run Vale with reviewdog
+        env:
+          REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.REVIEWDOG_GITHUB_API_TOKEN }}
         run: |
           vale . --output=JSON | reviewdog -f=vale -reporter=github-pr-review -filter-mode=nofilter -fail-on-error=false -name="Vale"
