--- a/.github/workflows/vale.yml
+++ b/.github/workflows/vale.yml
@@ -34,4 +34,4 @@ jobs:
         env:
           REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.REVIEWDOG_GITHUB_API_TOKEN }}
         run: |
-          vale . --output=JSON | reviewdog -f=vale -reporter=github-pr-review -filter-mode=nofilter -fail-on-error=false -name="Vale"
+          vale . --output=JSON | reviewdog -f=rdjson -reporter=github-pr-review -filter-mode=nofilter -fail-on-error=false -name="Vale"
